# appointment_app

./: .gitignore  README.md  compose.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  exampleenv.env  nginx.conf
backend/: .env.test  Dockerfile  README.md  alembic.ini  check_appointment.py  pyproject.toml  pytest.ini  test_endpoints.py  test_postpone.py
backend/alembic/: env.py
backend/alembic/versions/: 0249db6dd5fc_init.py  156bee3cb712_add_posts_table_with_enum.py  181ff0f23ac2_auto.py  18ab3aeaedcc_type_error_fixed.py  21c89d686aa8_init.py  252e4ca8f9d4_creating_view.py  25f755eb3df5_create_view.py  279e1ea8ab92_removed_cappitalization_in_position_.py  2e4d4aaa8eda_created_appointment.py  63167f8d9729_create_view.py  6bc8b0e42c1b_init.py  6e44bc54f768_is_active_column_is_added.py  6ebf922952d2_add_office_member_details_view.py  6ff147f13dcc_init.py  8097e9b9fb66_created_appointment_view.py  9c9764e8b1c0_init.py  b9fd06c55989_creating_view.py  cf2632a1eeab_office_table_added.py  d375000af8f3_init.py
backend/app/: backend_pre_start.py  config.py  constants.py  database.py  dependencies.py  initial_data.py  loggs.py  main.py  rate_limiting.py  role_perm_seed.py  schemas.py  utils.py
backend/app/admin/: config.py  crud.py  dependencies.py  dependencies_refactored.py  exceptions.py  middleware.py  models.py  router.py  router_simple.py  routes.py  schemas.py  service.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 25f755eb3df5_create_view.py  2b2dbb2a0cdd_add_issued_by_and_fix_view.py  2e4d4aaa8eda_created_appointment.py  6ff147f13dcc_init.py  8097e9b9fb66_created_appointment_view.py
backend/app/appointments/: __init__.py  _sms_service.py  constants.py  crud.py  dependencies.py  exceptions.py  models.py  roters.py  router.py  routers.py  schemas.py  service.py  services.py  sms_config.py  sms_providers.py  sms_service.py  sms_types.py  utils.py  view.py
backend/app/auth/: config.py  constants.py  crud.py  dependencies.py  models.py  rbac.py  router.py  schemas.py  security.py  service.py  user_emails.py  utils.py
backend/app/core/: __init__.py  cache.py  csrf.py  db.py  monitoring.py  security.py  serialization.py  validation.py
backend/app/core/emails/: email_config.py  services.py
backend/app/core/middleware/: caching.py  cors.py  error_handling.py  logging.py  security.py
backend/app/emails/: email_config.py
backend/app/items/: router.py
backend/app/notifications/: service.py  sms_provider.py  sse.py
backend/app/office_mgnt/: crud.py  models.py  router.py  schemas.py  services.py  utils.py  views.py
backend/app/sms/: service.py
backend/app/status/: __init__.py  crud.py  routes.py  schemas.py  services.py
backend/app/templates/appointments/: appointment-approved-inline.html  appointment-created-inline.html  appointment-denied-inline.html  appointment-postponed-inline.html
backend/app/templates/user/: account-invite-inline.html  account-verification-confirmation-inline.html  account-verification-inline.html  password-reset-inline.html
backend/app/views/: crud.py  routes.py  schemas.py  services.py
backend/scripts/: prestart.sh
backend/tests/: README.md  config_test.py  conftest.py  test_admin.py  test_admin_comprehensive.py  test_admin_routes.py  test_appointments.py  test_auth.py  test_auth_routes.py  test_basic.py  test_config.py  test_items_comprehensive.py  test_offices.py  test_superadmin_comprehensive.py  test_system_admin.py
backend/tests/api/routes/: test_items.py  test_login.py  test_users.py
backend/tests/crud/: test_user.py
backend/tests/test_user_routes/: test_get_user.py  test_user_login.py
backend/tests/utils/: item.py  user.py  utils.py
backends/: Dockerfile  pyproject.toml
backends/alembic/: env.py
backends/app/: config.py  database.py  role_perm_seed.py  schemas.py  utils.py
backends/app/admin/: crud.py  dependencies.py  exceptions.py  models.py  router.py  router_simple.py  service.py
backends/app/auth/: config.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  user_emails.py
backends/app/core/: cache.py  security.py  validation.py
backends/app/emails/: config.py
backends/app/items/: crud.py  dependencies.py  schemas.py  service.py
backends/tests/: conftest.py  test_admin_comprehensive.py  test_admin_routes.py  test_health.py  test_rbac.py  test_validation.py
backends/tests/test_user_routes/: test_forgot_password.py  test_refresh_token.py  test_reset_password.py  test_user_registration.py  test_user_verification.py
config/: deploy.hez.yml  deploy.yml
frontend/: .gitignore  Dockerfile  Dockerfile.dev  README.md  auth.ts  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml  proxy.ts  server.js
frontend/.next/: app-build-manifest.json  build-manifest.json  prerender-manifest.json
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/types/: routes.d.ts  validator.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/Signin/: page.tsx
frontend/components/: Navbar.tsx  NavbarClient.tsx  Sidebar.tsx  app-sidebar.tsx  notivication.tsx
frontend/components/ui/: alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  spinner.tsx  table.tsx  textarea.tsx  tooltip.tsx
frontend/fuctions/: Provider.tsx
frontend/fuctions/api/: client.ts
frontend/fuctions/services/: action.ts
frontend/helpers/: Provider.tsx  auth-errors.ts  auth-guard.ts  getUserRole.ts
frontend/hooks/: useActivateUser.ts  useAssignRole.ts  useDeactivateUser.ts  useDeleteUser.ts  useEditUser.ts  useResendInvite.ts  useRevokeRole.ts  useUserStats.ts
mock-sms/: Dockerfile  index.html  mock_sms_server.py
(+1212 files in other folders)
