[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"

# main dependencies
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.14.0",
    "tenacity>=8.2.3,<9.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "databases[postgresql]>=0.9.0",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "sentry-sdk[fastapi]>=2.0.1,<3.0.0",
    "redis>=5.1.1",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "httpx>=0.27.2",
    "xlsxwriter>=3.2.0",
    "fastapi-mail>=1.5.2",
    "sqlalchemy-views>=0.3.2",
]

# uv replaces [dependency-groups.dev] with "optional-dependencies"
[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "mypy>=1.13.0,<2.0.0",
    "ruff>=0.7.0,<1.0.0",
    "pre-commit>=3.8.0,<4.0.0",
    "types-passlib>=1.7.7.20240106,<2.0.0.0",
    "coverage>=7.6.0,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatch build target path
[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

# mypy configuration
[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

# ruff config (uv supports it the same way)
[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG001", "T201"]
ignore = ["E501", "B008", "W191", "B904"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

# coverage config (still valid)
[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

